--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "pdfjs-dist": "3.11.174",
     "react-pdf/pdfjs-dist": "3.11.174",
     "@react-pdf-viewer/core/pdfjs-dist": "3.11.174"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.11",
+    "@types/react": "^19.0.12",
+    "typescript": "^5.8.2"
   }
 }
